--- a/src/app.css
+++ b/src/app.css
@@ -80,6 +80,7 @@ a {
   border-radius: 5px;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.05);
   overflow: hidden;
+  margin-top: 5rem;
 }
 
 #uptime .item {
